--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4452,6 +4452,31 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_REALTIME_KEOGRAM_NAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_REALTIME_KEOGRAM_NAME(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_REALTIME_KEOGRAM_NAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_REALTIME_KEOGRAM_FOLDER.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.FILETRANSFER__REMOTE_REALTIME_KEOGRAM_FOLDER(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_REALTIME_KEOGRAM_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">Remote folder to store realtime keograms</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_ENDOFNIGHT_FOLDER.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -4600,6 +4625,17 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">Enable panorama video uploads</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__UPLOAD_REALTIME_KEOGRAM.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__UPLOAD_REALTIME_KEOGRAM(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__UPLOAD_REALTIME_KEOGRAM-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Enable realtime keogram uploads (0 = disable, 1 = every image, 2 = every 2nd image, etc)</div>
     </div>
 
     <div class="form-group row">
@@ -7272,9 +7308,12 @@ const field_names = [
     'FILETRANSFER__REMOTE_STARTRAIL_FOLDER',
     'FILETRANSFER__REMOTE_STARTRAIL_VIDEO_NAME',
     'FILETRANSFER__REMOTE_STARTRAIL_VIDEO_FOLDER',
+    'FILETRANSFER__REMOTE_REALTIME_KEOGRAM_NAME',
+    'FILETRANSFER__REMOTE_REALTIME_KEOGRAM_FOLDER',
     'FILETRANSFER__REMOTE_ENDOFNIGHT_FOLDER',
     'FILETRANSFER__UPLOAD_IMAGE',
     'FILETRANSFER__UPLOAD_PANORAMA',
+    'FILETRANSFER__UPLOAD_REALTIME_KEOGRAM',
     'FILETRANSFER__LIBCURL_OPTIONS',
     'S3UPLOAD__CLASSNAME',
     'S3UPLOAD__ACCESS_KEY',
