--- a/indi_allsky/flask/templates/loop.html
+++ b/indi_allsky/flask/templates/loop.html
@@ -27,6 +27,7 @@ canvas {
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_loop.js') }}"></script>
 <script type="text/javascript">
+var img;
 var camera_id = {{ camera_id }};
 var refreshInterval = {{ refreshInterval | int }};
 var loadCountdown = 0;  // load immediately
@@ -42,45 +43,12 @@ var json_data = {
 };
 var fullscreen = false;  //initial state
 
+
 function init() {
-    loadImages();
-    loop();
-}
-
-async function loop() {
-    console.log('Starting loop');
-
-    while(json_data['image_list'].length == 0) {
-        await sleep(100);
-    }
-
-    // prevent concurrent updates to list
-    var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
-
-    if (rock) {
-        for (var i = 0; i < image_list_copy.length; i++) {
-            showImage(image_list_copy[i], i);
-            await sleep(frame_delay_ms);
-        };
-    };
-
-    for (var i = image_list_copy.length - 1; i >= 0; i--) {
-        showImage(image_list_copy[i], i);
-        await sleep(frame_delay_ms);
-    };
-
-    setTimeout(loop, 3000);
-}
-
-
-function showImage(entry, idx) {
-    console.log('Showing image ' + entry["url"]);
-
     var canvas = document.getElementById("canvas");
     var context = canvas.getContext("2d");
 
-    var img = new Image();
-    img.src = entry["url"];
+    img = new Image();
     img.onload = function() {
         canvas.setAttribute("width", window.innerWidth);
         canvas.setAttribute("height", window.innerHeight);
@@ -112,6 +80,42 @@ function showImage(entry, idx) {
         }
 
     };
+
+
+    loadImages();
+    loop();
+}
+
+
+async function loop() {
+    console.log('Starting loop');
+
+    while(json_data['image_list'].length == 0) {
+        await sleep(100);
+    }
+
+    // prevent concurrent updates to list
+    var image_list_copy = JSON.parse(JSON.stringify(json_data['image_list']));
+
+    if (rock) {
+        for (var i = 0; i < image_list_copy.length; i++) {
+            showImage(image_list_copy[i], i);
+            await sleep(frame_delay_ms);
+        };
+    };
+
+    for (var i = image_list_copy.length - 1; i >= 0; i--) {
+        showImage(image_list_copy[i], i);
+        await sleep(frame_delay_ms);
+    };
+
+    setTimeout(loop, 3000);
+}
+
+
+function showImage(entry, idx) {
+    console.log('Showing image ' + entry["url"]);
+    img.src = entry["url"];
 }
 
 
